Fixed TODOs and added Documentation